--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
@@ -5,9 +5,7 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a *ngFor="let route of routes" mat-list-item [routerLink]="[route.url]">{{route.name}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +18,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>ClientApp</span>
+      <span>Zoo</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
