--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.scss
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.scss
@@ -1,18 +1,19 @@
 .container {
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 .full-width-table {
+  table-layout: fixed;
   width: 100%;
+  #{"th"}.mat-column-actions {
+    width: 150px;
+  }
 }
 
 .filter {
   width: 100%;
-  > .field {
-    width: 50%;
-  }
   > .pull-right {
-    right: calc(2.5rem - 50%);
+    right: calc(2.5rem - 100%);
     position: relative;
   }
 }
