Fixex, Popues and Snackbars in Users

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
@@ -16,7 +16,7 @@
         <button mat-mini-fab color="primary" type="button" [routerLink]="['/security/users/update/', row.id]">
           <mat-icon aria-label="button with a edit icon">edit</mat-icon>
         </button>
-        <button mat-mini-fab color="accent" type="button" (click)="delete(row.id)">
+        <button mat-mini-fab color="accent" type="button" (click)="delete(row)">
           <mat-icon aria-label="button with a edit icon">delete</mat-icon>
         </button>
       </td>
