--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/user/user.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/user/user.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="userForm" novalidate (ngSubmit)="onSubmit()">
+<form class="container" [formGroup]="userForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>User Information</mat-card-title>
+      <mat-card-title>{{editMode ? 'Update' : 'Create'}} User</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
