Added CRUD of Infirmaries

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries.component.html
@@ -1,3 +1,6 @@
-<p>
-  infirmaries works!
-</p>
+<div class="container">
+    <h3>
+      Infirmaries
+    </h3>
+    <app-infirmaries-list></app-infirmaries-list>
+  </div>
