--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -1,25 +1,43 @@
-<div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
+<div class="mat-elevation-z8 container">
+    <div class="filter">
+      <button class="pull-right" mat-mini-fab color="primary" type="button" [routerLink]="['/params/infirmaries/create']"><mat-icon aria-label="button with a add icon">add</mat-icon></button>
+    </div>
+    <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
+      <!-- Name Column -->
+      <ng-container matColumnDef="idAnimal">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>IdAnimal</th>
+        <td mat-cell *matCellDef="let row">{{row.idAnimal}}</td>
+      </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
-    </ng-container>
+      <ng-container matColumnDef="admissionDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Admission date</th>
+          <td mat-cell *matCellDef="let row">{{row.admissionDate}}</td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator #paginator
-      [length]="dataSource.data.length"
-      [pageIndex]="0"
-      [pageSize]="50"
+        <ng-container matColumnDef="diagnosis">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis</th>
+            <td mat-cell *matCellDef="let row">{{row.diagnosis}}</td>
+          </ng-container>
+  
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-mini-fab color="primary" type="button" [routerLink]="['/params/infirmaries/update/', row.id]">
+            <mat-icon aria-label="button with a edit icon">edit</mat-icon>
+          </button>
+          <button mat-mini-fab color="accent" type="button" (click)="delete(row)">
+            <mat-icon aria-label="button with a edit icon">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+  
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator #paginator [length]="dataSource.data?.length" [pageIndex]="0" [pageSize]="50"
       [pageSizeOptions]="[25, 50, 100, 250]">
-  </mat-paginator>
-</div>
+    </mat-paginator>
+  </div>
