Added animal's CRUD

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals.component.html
@@ -1,3 +1,6 @@
-<p>
-  animals works!
-</p>
+<div class="container">
+    <h3>
+      Animals
+    </h3>
+    <app-animals-list></app-animals-list>
+  </div>
