--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+      *ngIf="navigationVisible"
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
@@ -9,7 +10,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar *ngIf="navigationVisible" color="primary">
       <button
         type="button"
         aria-label="Toggle sidenav"
