--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/user/user.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/user/user.component.html
@@ -9,7 +9,7 @@
           <mat-form-field class="full-width">
             <input matInput placeholder="Name" formControlName="name">
             <mat-error *ngIf="userForm.controls['name'].hasError('required')">
-              Name is <strong>required</strong>
+              User is <strong>required</strong>
             </mat-error>
           </mat-form-field>
         </div>
