--- a/4.UI/OG.Zoo.UI/ClientApp/src/styles.scss
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/styles.scss
@@ -3,6 +3,7 @@
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
+@import './app/themes/themes.scss';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -12,19 +13,23 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ClientApp-primary: mat-palette($mat-indigo);
-$ClientApp-accent: mat-palette($mat-pink, A200, A100, A400);
+$primary: mat-palette($mat-indigo);
+$accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$ClientApp-warn: mat-palette($mat-red);
+$warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$ClientApp-theme: mat-light-theme($ClientApp-primary, $ClientApp-accent, $ClientApp-warn);
+$theme: mat-light-theme($primary, $accent, $warn);
+
+
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($ClientApp-theme);
+@include angular-material-theme($theme);
+
+@include auth-theme($theme);
 
 /* You can add global styles to this file, and also import other style files */
 
