Fixes over auth

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
@@ -1,9 +1,8 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
-      *ngIf="navigationVisible"
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="!(isHandset$ | async)">
+      [opened]="navigationVisible? !(isHandset$ | async): false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a *ngFor="let route of routes" mat-list-item [routerLink]="[route.url]">{{route.name}}</a>
