Fixes in titles

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animal/animal.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animal/animal.component.html
@@ -1,7 +1,7 @@
 <form class="container" [formGroup]="animalForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>{{editMode ? 'Update' : 'Create'}} User</mat-card-title>
+      <mat-card-title>{{editMode ? 'Update' : 'Create'}} Animal</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
