--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h3>
-      Infirmaries
+      Visits to the Infirmary 
     </h3>
     <app-infirmaries-list></app-infirmaries-list>
   </div>
