--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/themes/mixins/auth-theme.scss
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/themes/mixins/auth-theme.scss
@@ -32,5 +32,8 @@
             }
         }
     }
+    .mat-form-field-appearance-outline .mat-form-field-outline-thick{
+        color: mat-color($primary);
+    }
 }
 
