--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -4,9 +4,9 @@
     </div>
     <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
       <!-- Name Column -->
-      <ng-container matColumnDef="idAnimal">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>IdAnimal</th>
-        <td mat-cell *matCellDef="let row">{{row.idAnimal}}</td>
+      <ng-container matColumnDef="animal">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Animal</th>
+        <td mat-cell *matCellDef="let row">{{row.animal?.name}}</td>
       </ng-container>
 
       <ng-container matColumnDef="admissionDate">
