Added animation for sidenav button

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.html
@@ -1,5 +1,18 @@
+<mat-toolbar *ngIf="navigationVisible" color="primary">
+  <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+    <mat-icon [@openClose]="drawer.opened ? 'open' : 'close'" aria-label="Side nav toggle icon">{{drawer.opened ? 'close' : 'menu'}}</mat-icon>
+  </button>
+  <span class="title">Zoo</span>
+  <!-- This fills the remaining space of the current row -->
+  <span class="fill-remaining-space"></span>
+  <span>
+    <button mat-icon-button (click)="close()">
+      <mat-icon aria-label="Close session icon">exit_to_app</mat-icon>
+    </button>
+  </span>
+</mat-toolbar>
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+  <mat-sidenav #drawer class="sidenav" [fixedInViewport]="isHandset$ | async"
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="navigationVisible? !(isHandset$ | async): false">
     <mat-toolbar>Menu</mat-toolbar>
@@ -8,16 +21,6 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar *ngIf="navigationVisible" color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Zoo</span>
-      <!-- This fills the remaining space of the current row -->
-      <span class="fill-remaining-space"></span>
-      <span><button mat-icon-button (click)="close()"><mat-icon aria-label="Close session icon">exit_to_app</mat-icon></button></span>
-    </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
   </mat-sidenav-content>
