--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/shared/dialogs/confirm/confirm.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/shared/dialogs/confirm/confirm.component.html
@@ -3,5 +3,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No.</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Confirm.</button>
+  <button mat-button color="accent" [mat-dialog-close]="true" cdkFocusInitial>Confirm.</button>
 </div>
