--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -1,6 +1,13 @@
 <div class="mat-elevation-z8 container">
     <div class="filter">
-      <button class="pull-right" mat-mini-fab color="primary" type="button" [routerLink]="['/params/infirmaries/create']"><mat-icon aria-label="button with an add icon">add</mat-icon></button>
+        <div class="pull-right">
+            <button mat-mini-fab color="primary" type="button" [routerLink]="['/params/infirmaries/create']">
+              <mat-icon aria-label="button with a add icon">add</mat-icon>
+            </button>
+            <button mat-mini-fab color="accent" type="button" (click)="refresh()">
+              <mat-icon aria-label="button with a add icon">refresh</mat-icon>
+            </button>
+        </div>
     </div>
     <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
       <!-- Name Column -->
