--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -18,7 +18,7 @@
 
       <ng-container matColumnDef="admissionDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Admission date</th>
-          <td mat-cell *matCellDef="let row">{{row.admissionDate}}</td>
+          <td mat-cell *matCellDef="let row">{{row.admissionDate | date:'short'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="diagnosis">
@@ -33,7 +33,7 @@
           <button mat-mini-fab color="primary" type="button" [routerLink]="['/params/infirmaries/update/', row.id]">
             <mat-icon aria-label="button with a edit icon">edit</mat-icon>
           </button>
-          <button mat-mini-fab color="accent" type="button" (click)="delete(row)">
+          <button mat-mini-fab color="warn" type="button" (click)="delete(row)">
             <mat-icon aria-label="button with a edit icon">delete</mat-icon>
           </button>
         </td>
