--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
@@ -1,12 +1,15 @@
 <div class="mat-elevation-z8 container">
   <div class="filter">
     <div class="pull-right">
-        <button mat-mini-fab color="primary" type="button" [routerLink]="['/security/users/create']">
-          <mat-icon aria-label="button with a add icon">add</mat-icon>
-        </button>
-        <button mat-mini-fab color="accent" type="button" (click)="refresh()">
-          <mat-icon aria-label="button with a add icon">refresh</mat-icon>
-        </button>
+      <button mat-icon-button color="primary" type="button" [routerLink]="['/security/users/create']">
+        <mat-icon aria-label="button with a add icon">add</mat-icon>
+      </button>
+      <button mat-icon-button color="accent" type="button" (click)="refresh()">
+        <mat-icon aria-label="button with a refresh icon">refresh</mat-icon>
+      </button>
+      <button mat-icon-button color="" type="button" (click)="export()">
+        <mat-icon aria-label="button with a save icon">save_alt</mat-icon>
+      </button>
     </div>
   </div>
   <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
@@ -18,17 +21,16 @@
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">Actions</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-mini-fab color="primary" type="button" [routerLink]="['/security/users/update/', row.id]">
+        <button mat-icon-button color="primary" type="button" [routerLink]="['/security/users/update/', row.id]">
           <mat-icon aria-label="button with a edit icon">edit</mat-icon>
         </button>
-        <button mat-mini-fab color="warn" type="button" (click)="delete(row)">
+        <button mat-icon-button color="warn" type="button" (click)="delete(row)">
           <mat-icon aria-label="button with a edit icon">delete</mat-icon>
         </button>
       </td>
     </ng-container>
-
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
