Fixed background in login

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.scss
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/navigation/navigation.component.scss
@@ -2,6 +2,9 @@ $sidenav-width: 200px;
 
 .sidenav-container {
   height: calc(100% - 64px);
+  &.login {
+    height: 100%;
+  }
 }
 @media (max-width: 599px) {
   .sidenav-container {
