--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals-list/animals-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals-list/animals-list.component.html
@@ -13,6 +13,7 @@
     </div>
   </div>
   <div class="table-container">
+    <mat-progress-bar mode="indeterminate" *ngIf="dataSource.loading$ | async"></mat-progress-bar>
     <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
       <!-- Name Column -->
       <!-- ['name', 'age', 'country', 'species', 'subspecies', 'eatingHabits', 'type', 'actions']; -->
@@ -54,7 +55,7 @@
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button color="primary" type="button" [routerLink]="['/params/animals/update/', row.id]">
             <mat-icon aria-label="button with a edit icon">edit</mat-icon>
