--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -12,9 +12,10 @@
       </button>
     </div>
   </div>
+  <mat-progress-bar mode="indeterminate" *ngIf="dataSource.loading$ | async"></mat-progress-bar>
   <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
     <!-- Name Column -->
-    <ng-container matColumnDef="animal">
+    <ng-container matColumnDef="animal.name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Animal</th>
       <td mat-cell *matCellDef="let row">{{row.animal?.name}}</td>
     </ng-container>
@@ -31,7 +32,7 @@
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" type="button" [routerLink]="['/params/infirmaries/update/', row.id]">
           <mat-icon aria-label="button with a edit icon">edit</mat-icon>
