--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/security/users/users-list/users-list.component.html
@@ -12,6 +12,7 @@
       </button>
     </div>
   </div>
+  <mat-progress-bar mode="indeterminate" *ngIf="dataSource.loading$ | async"></mat-progress-bar>
   <table mat-table #table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
     <!-- Name Column -->
     <ng-container matColumnDef="name">
@@ -21,7 +22,7 @@
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">Actions</th>
+      <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" type="button" [routerLink]="['/security/users/update/', row.id]">
           <mat-icon aria-label="button with a edit icon">edit</mat-icon>
