--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals-list/animals-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/animals/animals-list/animals-list.component.html
@@ -71,7 +71,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-  <mat-paginator #paginator [length]="dataSource.data?.length" [pageIndex]="0" [pageSize]="5"
+  <mat-paginator #paginator [pageIndex]="0" [pageSize]="5"
     [pageSizeOptions]="[5, 10, 25, 50]">
   </mat-paginator>
 </div>
