--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/zoo/params/infirmaries/infirmaries-list/infirmaries-list.component.html
@@ -48,7 +48,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator [length]="dataSource.data?.length" [pageIndex]="0" [pageSize]="5"
+  <mat-paginator #paginator [pageIndex]="0" [pageSize]="5"
     [pageSizeOptions]="[5, 10, 25, 50]">
   </mat-paginator>
 </div>
