Partial support of pwd recovery
- Improved password recovery email
- Added password dialog in auth view

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/auth/auth.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/auth/auth.component.html
@@ -33,6 +33,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-raised-button color="primary">LOGIN</button>
+        <button mat-raised-button (click)="openRecoveryPassword()" type="button" >I forget my password</button>
       </mat-card-actions>
     </mat-card>
   </form>
