Added check recovery token

--- a/4.UI/OG.Zoo.UI/Templates/EmailRecovery.html
+++ b/4.UI/OG.Zoo.UI/Templates/EmailRecovery.html
@@ -59,7 +59,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <a href="@string.Format(Model.UrlToken, "auth/recoveryPassword")" style="color:#2C53B2;text-decoration:none;display:block;">
+                                                    <a href="@string.Format(Model.UrlToken, "recoveryPassword")" style="color:#2C53B2;text-decoration:none;display:block;">
                                                         <table border="0" width="390" cellspacing="0" cellpadding="0"
                                                                style="border-collapse:collapse;">
                                                             <tr>
