Recovery password finished

--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/themes/commons.scss
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/themes/commons.scss
@@ -2,6 +2,13 @@
   padding: 0.5rem;
 }
 
+.background-container {
+  background-image: url('~/assets/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: bottom;
+}
+
 .filter {
   width: 100%;
   > .pull-right {
