--- a/4.UI/OG.Zoo.UI/ClientApp/src/app/auth/recovery/recovery.component.html
+++ b/4.UI/OG.Zoo.UI/ClientApp/src/app/auth/recovery/recovery.component.html
@@ -1,3 +1,4 @@
-<p>
-  recovery works!
-</p>
+<div class="form-container background-container">
+  <app-form (submit)="onSubmit($event)" (cancel)="onCancel()" [config]="config" [title]="title"
+    subtitle="Please enter your new password"></app-form>
+</div>
