--- a/4.UI/OG.Zoo.UI/Templates/PasswordChanged.cshtml
+++ b/4.UI/OG.Zoo.UI/Templates/PasswordChanged.cshtml
@@ -45,45 +45,31 @@
                                             <tr>
                                                 <td>
                                                     <p style="margin:10px 0 10px 0;color:#565a5c;font-size:18px;">
-                                                        Hi @Model.Name,
-                                                    </p>
-                                                    <p style="margin:10px 0 10px 0;color:#565a5c;font-size:18px;">
-                                                        We got a request to reset your Zoo password.
+                                                        This is a confirmation that the password for your Zoo account @Model.Name has just been changed.
                                                     </p>
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td height="10" style="line-height:10px;" colspan="1">
-                                                    &nbsp;
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    <a href="@string.Format(Model.UrlToken, "recoveryPassword")" style="color:#2C53B2;text-decoration:none;display:block;">
-                                                        <table border="0" width="390" cellspacing="0" cellpadding="0"
-                                                               style="border-collapse:collapse;">
-                                                            <tr>
-                                                                <td style="border-collapse:collapse;border-radius:3px;text-align:center;display:block;border:solid 1px #009fdf;padding:10px 16px 14px 16px;margin:0 2px 0 auto;min-width:80px;background-color:#47A2EA;">
-                                                                    <center>
-                                                                        <font size="3">
-                                                                            <span style="font-family:HelveticaNeue,Helvetica,Roboto,Arial,sans-serif;white-space:nowrap;font-weight:bold;vertical-align:middle;color:#fdfdfd;font-size:16px;line-height:16px;">Reset&nbsp;Password</span>
-                                                                        </font>
-                                                                    </center>
-                                                                </td>
-                                                            </tr>
-                                                        </table>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td height="10" style="line-height:10px;" colspan="1">
+                                                <td height="5" style="line-height:5px;" colspan="1">
                                                     &nbsp;
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
                                                     <p style="margin:10px 0 10px 0;color:#565a5c;font-size:18px;">
-                                                        If you ignore this message, your password will not be changed. If you didn&#039;t request a password reset, <a style="color:#3b5998;text-decoration:none;"> let us know</a>.
+                                                        If this is your Zoo account but you didn't request a password change, you can <a href='@string.Format("{0}/auth?recovery=true", Model.UrlBase)' style="color:#3b5998;text-decoration:none;">reset your password here</a>.
+                                                    </p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td height="5" style="line-height:5px;" colspan="1">
+                                                    &nbsp;
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p style="margin:10px 0 10px 0;color:#565a5c;font-size:18px;">
+                                                        If you're having trouble, please <a style="color:#3b5998;text-decoration:none;">let us know</a>.
                                                     </p>
                                                 </td>
                                             </tr>
